# llmx

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
configs/: config.default.yml
llmx/: __init__.py  cli.py  datamodel.py  utils.py  version.py
llmx/configs/: config.default.yml
llmx/embeddings/: __init__.py  cohere_embedding.py  oai_embedding.py  text_embedding.py
llmx/generators/: __init__.py  text.py
llmx/generators/cache/: cache.db  cache.db-shm  cache.db-wal
llmx/generators/text/: __init__.py  anthropic_textgen.py  base_textgen.py  cohere_textgen.py  hf_textgen.py  openai_textgen.py  palm_textgen.py  providers.py  textgen.py
notebooks/: tutorial.ipynb
notebooks/research/: travelbenchmark.ipynb
pyllm/: datamodel.py  utils.py  version.py
pyllm/generators/: text.py
tests/: test_generators.py
