[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Pyllm" 
authors = [
  { name="Victor Dibia", email="victor.dibia@gmail.com" },
]
description = "PYLLM: A library for LLM Text Generation"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic",
  "openai", 
  "tiktoken",
  "diskcache",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = {attr = "pyllm.version.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]  
include = ["pyllm*"]  
exclude = ["*.tests*"]  
namespaces = false  

[tool.setuptools.package-data]
"pyllm" = ["*.*"]

[project.urls]
"Homepage" = "https://github.com/victordibia/pyllm"
"Bug Tracker" = "https://github.com/victordibia/pyllm/issues"

[project.scripts]
pyllm = "pyllm.cli:run" 